# ax620a-pipeline

./: .gitignore  .gitmodules  1.diff  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: build_func.cmake  overlook.cmake
docs/: compile.md  config_file.md  how_to_adjust_image_orientation.md  how_to_deploy_custom_model.md  how_to_deploy_custom_yolov5_model.md  how_to_speed_up_submodule_init.md  modelzoo.md  new_pipeline.md  update.md
examples/: build_func.cmake
examples/common/: common_func.c  common_func.h  common_joint.c  common_joint.h  common_pipeline.cpp  common_pipeline.h  common_pipeline_ai.c  sample_def.h  video_demux.hpp
examples/common/common_pipeline/: CMakeLists.txt  common_pipeline.cpp  common_pipeline.h  common_pipeline_ivps.cpp  common_pipeline_vdec.cpp  common_pipeline_venc.cpp  common_pipeline_vo.cpp
examples/common/common_pipeline/ax620/: common_pipeline.cpp  common_pipeline_ivps.cpp  common_pipeline_vdec.cpp  common_pipeline_venc.cpp  common_pipeline_vo.cpp
examples/common/common_pipeline/ax650/: common_pipeline.cpp  common_pipeline_ivps.cpp  common_pipeline_vdec.cpp  common_pipeline_venc.cpp  common_pipeline_vo.cpp
examples/libaxdl/: CMakeLists.txt
examples/libaxdl/config/: ax_bvc_det.json  ax_person_det.json  ax_pose.json  ax_pose_yolov5s.json  ax_pose_yolov8.json  hand_pose_yolov7_palm.json  hrnet_animal_pose.json  hrnet_pose.json  hrnet_pose_ax_det.json  hrnet_pose_yolov8.json  license_plate_recognition.json  nanodet.json  palm_hand_detection.json  scrfd.json  yolov5_seg.json  yolov5s.json  yolov5s_face.json  yolov5s_face_recognition.json  yolov5s_license_plate.json  yolov6.json  yolov7.json  yolov7_face.json  yolov7_palm_hand.json  yolov8.json  yolov8_seg.json  yolox.json
examples/libaxdl/config/ax620/: ax_person_det.json  hand_pose_yolov7_palm.json  hrnet_pose.json  hrnet_pose_yolov8.json  yolo_fastbody.json  yolov5s.json  yolov5s_face.json  yolov6.json  yolov8.json
examples/libaxdl/config/ax650/: dinov2.json  dinov2_depth.json  glpdepth.json  ppyoloe.json  scrfd.json  yolo_nas.json  yolov5_seg.json  yolov5s_650.json  yolov5s_face.json  yolov6.json  yolov7.json  yolov7_face.json  yolov8.json  yolov8_pose.json  yolox.json
examples/libaxdl/include/: ax_common_api.h  ax_joint_runner.hpp  ax_model_base.hpp  ax_model_runner.hpp  ax_osd_drawer.hpp  ax_osd_helper.hpp  c_api.h
examples/libaxdl/src/: ax_common_api.cpp  ax_joint_runner_ax620.cpp  ax_model_base.cpp  ax_model_crowdcount.cpp  ax_model_crowdcount.hpp  ax_model_det.cpp  ax_model_det.hpp  ax_model_ml_sub.cpp  ax_model_ml_sub.hpp  ax_model_multi_level_model.cpp  ax_model_multi_level_model.hpp  ax_model_runner_ax620.cpp  ax_model_runner_ax620.hpp  ax_model_runner_ax650.cpp  ax_model_runner_ax650.hpp  ax_model_seg.cpp  ax_model_seg.hpp  c_api.cpp  sample_run_joint.cpp
examples/libaxdl/src/base/: detection.hpp  yolo.hpp
examples/libaxdl/src/utilities/: mat_pixel_affine.cpp  object_register.hpp
examples/sample_demux_ivps_joint_hdmi_vo/: CMakeLists.txt  sample_mp4_ivps_joint_hdmi_vo.cpp
examples/sample_demux_ivps_joint_rtsp/: CMakeLists.txt  sample_mp4_ivps_joint_rtsp.cpp
examples/sample_demux_ivps_joint_rtsp_hdmi_vo/: CMakeLists.txt  README.md  sample_rtsp_ivps_joint_rtsp_hdmi_vo.cpp
examples/sample_demux_ivps_joint_rtsp_vo/: CMakeLists.txt  README.md  sample_rtsp_ivps_joint_rtsp_vo.cpp
examples/sample_demux_ivps_joint_vo/: CMakeLists.txt  README.md  sample_mp4_ivps_joint_vo.cpp
examples/sample_demux_ivps_npu_hdmi_vo/: CMakeLists.txt  README.md
examples/sample_demux_ivps_npu_rtsp/: CMakeLists.txt  README.md  sample_demux_ivps_npu_rtsp.cpp
examples/sample_demux_ivps_npu_rtsp_hdmi_vo/: CMakeLists.txt  sample_demux_ivps_npu_rtsp_hdmi_vo.cpp
examples/sample_demux_ivps_npu_rtsp_vo/: CMakeLists.txt  README.md  sample_demux_ivps_npu_rtsp_vo.cpp
examples/sample_demux_ivps_npu_vo/: CMakeLists.txt
examples/sample_h264_ivps_joint_vo/: CMakeLists.txt  README.md  sample_h264_ivps_joint_vo.cpp
examples/sample_mp4_ivps_joint_hdmi_vo/: CMakeLists.txt  sample_mp4_ivps_joint_hdmi_vo.cpp
examples/sample_mp4_ivps_joint_rtsp/: CMakeLists.txt  README.md  sample_mp4_ivps_joint_rtsp.cpp
examples/sample_mp4_ivps_joint_vo/: CMakeLists.txt  sample_mp4_ivps_joint_vo.cpp
examples/sample_multi_demux_ivps_joint_hdmi_vo/: CMakeLists.txt  README.md  sample_multi_rtsp_ivps_joint_hdmi_vo.cpp
examples/sample_multi_demux_ivps_joint_multi_rtsp/: CMakeLists.txt  README.md  sample_multi_rtsp_ivps_joint_multi_rtsp.cpp
examples/sample_multi_demux_ivps_joint_multi_rtsp_hdmi_vo/: CMakeLists.txt  sample_multi_rtsp_ivps_joint_multi_rtsp_hdmi_vo.cpp
examples/sample_multi_demux_ivps_npu_hdmi_vo/: CMakeLists.txt
examples/sample_rtsp_ivps_joint_hdmi_vo/: CMakeLists.txt  (+1 more)
examples/sample_v4l2_ivps_joint_vo/: CMakeLists.txt  README.md  sample_v4l2_ivps_joint_vo.cpp
examples/sample_v4l2_user_ivps_joint_vo/: CMakeLists.txt  README.md  sample_v4l2_user_ivps_joint_vo.cpp
examples/sample_vin_ivps_joint_venc_rtsp/: CMakeLists.txt  README.md  sample_vin_ivps_joint_venc_rtsp.c  sample_vin_ivps_joint_venc_rtsp.cpp  sample_vin_ivps_joint_venc_rtsp.h
examples/sample_vin_ivps_joint_venc_rtsp/pipe/: pipeline_ai.c  pipeline_ivps.c  pipeline_osd.c  pipeline_venc.c
examples/sample_vin_ivps_joint_venc_rtsp_vo/: CMakeLists.txt  README.md  sample_vin_ivps_joint_venc_rtsp_vo.c  sample_vin_ivps_joint_venc_rtsp_vo.cpp  sample_vin_ivps_joint_venc_rtsp_vo.h
examples/sample_vin_ivps_joint_venc_rtsp_vo/pipe/: pipeline_ai.c  pipeline_ivps.c  pipeline_osd.c  pipeline_venc.c  pipeline_vo.c
examples/sample_vin_ivps_joint_vo/: CMakeLists.txt  README.md  sample_vin_ivps_joint_vo.c  sample_vin_ivps_joint_vo.cpp  sample_vin_ivps_joint_vo.h
examples/sample_vin_ivps_joint_vo/pipe/: pipeline_ai.c  pipeline_ivps.c  pipeline_osd.c  pipeline_vo.c
examples/sample_vin_ivps_joint_vo_h265/: CMakeLists.txt  README.md  sample_vin_ivps_joint_vo_h265.cpp
examples/sample_vin_ivps_joint_vo_old/: CMakeLists.txt  sample_vin_ivps_joint_vo.c
examples/sample_vin_joint/: CMakeLists.txt  README.md  sample_vin_joint.c
(+136 files in other folders)
